2008-01-12  Brian Matherly <brian@gramps-project.org>
	* src/plugins/GVHourGlass.py: Clean up PyLint warnings.

2008-01-12  Benny Malengier <benny.malengier@gramps-project.org>
	* src/GrampsDisplay.py: open url in standard way
	* src/gramps.py: add comment on use of import gnome
	* README:
	* INSTALL:
	Remove need for gconf, add need for xdg utilities

2008-01-12 Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/Config/__init__.py: revert wrong indentation changes

2008-01-12  Benny Malengier <benny.malengier@gramps-project.org>
	* src/const.py.in: new manual constant keys
	* src/GrampsDisplay.py: show wiki manual, allow webpage and 
		section to be passed
	RERUN ./autogen.sh

2008-01-12  Peter Landgren <peter.talken@telia.com>
    * src/ViewManager.py: partial fix for #1580. Work in DisplayState.py remains.

2008-01-12  Stéphane Charette <stephanecharette@gmail.com>
	* src/Config/_GrampsConfigKeys.py:
	* src/ReportBase/_PaperMenu.py:
	* src/ReportBase/_GraphvizReportDialog.py:
	* src/ReportBase/_DocReportDialog.py:
	* src/ReportBase/_BareReportDialog.py:
	* src/ReportBase/_ReportOptions.py:
	remember if the paper options should be metric, and remember the
	custom paper sizes (issues #1481)
	* src/plugins/GVFamilyLines.py: small code cleanup
	* src/plugins/GVRelGraph.py: implement post_init()

2008-01-11  Stéphane Charette <stephanecharette@gmail.com>
	* src/ReportBase/_BareReportDialog.py: allow scroll arrows on the
	notebook if there are too many tabs to display
	* src/plugins/GVFamilyLines.py: context-sensitive control feedback
	based on other selected controls
	* src/PluginUtils/_MenuOptions.py: define inheritable method that gets
	called after all of the controls have been created

2008-01-11  Benny Malengier <benny.malengier@gramps-project.org>
	* src/glade/gramps.glade: add alt key combo's for buttons

2008-01-10 Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/gen/db/dbdir.py: add doc, remove unused variable