@@ -189,6 +189,31 @@ def build_user_paths():
     for path in const.USER_DIRLIST:
         if not os.path.isdir(path):
             os.mkdir(path)
+            
+def _display_welcome_message():
+    """
+    Display a welcome message to the user.
+    """
+    if not Config.get(Config.BETAWARN):
+        from QuestionDialog import WarningDialog
+        WarningDialog(
+            _('Danger: This is unstable code!'), 
+            _("This GRAMPS 3.0 Beta release is an early, experimental "
+              "peek at the future 3.0 release. This version is "
+              "not meant for normal usage. Use at your own risk.\n\n"
+              "This version may:\n"
+              "1) Work differently than you expect.\n"
+              "2) Fail to run at all\n"
+              "3) Crash often\n"
+              "4) Corrupt your data\n"
+              "5) Save data in a format that is incompatible with the "
+                 "official release.\n"
+              "\n<b>BACKUP</b> your existing databases "
+              "before opening them with this version, and make "
+              "sure to export your data to XML every now and then."))
+        Config.set(Config.AUTOLOAD, False)
+#        Config.set(Config.BETAWARN, True)
+        Config.set(Config.BETAWARN, Config.get(Config.BETAWARN))
 
 #-------------------------------------------------------------------------
 #
@@ -207,7 +232,7 @@ class Gramps:
         stopload = False
         try:
             build_user_paths()
-            self.welcome()    
+            _display_welcome_message()    
         except OSError, msg:
             ErrorDialog(_("Configuration error"), str(msg))
         except Errors.GConfSchemaError, val:
@@ -262,23 +287,4 @@ class Gramps:
         if Config.get(Config.USE_TIPS):
             TipOfDay.TipOfDay(self.vm.uistate)
 
-    def welcome(self):
-        return
-#         if not Config.get(Config.BETAWARN):
-#             from QuestionDialog import WarningDialog
-#             WarningDialog(
-#                 _('Danger: This is unstable code!'), 
-#                 _("The GRAMPS 2.1 release is an early, experimental "
-#                   "branch of the future 2.2 release. This version is "
-#                   "not meant for normal usage. Use at your own risk.\n\n"
-#                   "This version may:\n1) Fail to run properly\n"
-#                   "2) Corrupt your data\n3) Cause your hair to turn "
-#                   "pink and fall out.\n\nAny databases opened by this "
-#                   "version will <b>NO LONGER WORK</b> in older versions of "
-#                   "GRAMPS, and <b>MAY NOT WORK</b> in with future "
-#                   "releases of GRAMPS. <b>BACKUP</b> your existing databases "
-#                   "before opening them with this version, and make "
-#                   "sure to export your data to XML every now and then."))
-#             Config.set(Config.AUTOLOAD, False)
-#             Config.set(Config.BETAWARN, True)
                             
